# Code_Sense

./: README.md  plan.md  pyproject.toml  test_nla.py  test_nla_v2.py  test_remote_provider.py  verify_interceptor.py
conductor/: plan-optimization.md  plan-remote-sidecar.md  plan-ui-ux.md
nla_tui/: __init__.py  cli.py  client.py  filter.py  interceptor.py  registry.py  sidecar.py  tui.py  wrapper.py
nla_tui/providers/: base.py  local.py  remote.py
