[project]
name = "nla_tui"
version = "0.1.0"
description = "A sleek TUI for visualizing AI model internal thoughts using Natural Language Autoencoders."
authors = [
    { name = "Gemini CLI", email = "gemini-cli@example.com" }
]
dependencies = [
    "rich>=13.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "orjson>=3.9.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.21.0",
    "textual>=0.50.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
nla-cli = "nla_tui.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
